--- a/site/htdocs/index.html
+++ b/site/htdocs/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div id="terminal"></div>
-    <script src="https://raw.githubusercontent.com/gzuidhof/coi-serviceworker/master/coi-serviceworker.min.js"></script>
+    <script src="./coi-serviceworker.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/xterm@4.17.0/lib/xterm.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/xterm-pty@0.9.4/index.js"></script>
     <script src="./stack.js"></script>
