--- a/site/htdocs/index.html
+++ b/site/htdocs/index.html
@@ -29,7 +29,7 @@
 
       var nwStack;
       var netParam = getNetParam();
-      var workerImage = location.origin + "/out.wasm";
+      var workerImage = location.origin + "/container_on_browser/out.wasm";
       if (netParam) {
           if (netParam.mode == 'delegate') {
               nwStack = delegate(worker, workerImage, netParam.param);
